--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vicgonvt/press",
+    "name": "athula/press",
     "description": "An elegant markdown-powered blog for the Laravel framework.",
     "license": "MIT",
     "authors": [
